--- a/__tests__/fixtures/tailwind-output-ie11.css
+++ b/__tests__/fixtures/tailwind-output-ie11.css
@@ -4255,6 +4255,30 @@ video {
   align-items: stretch;
 }
 
+.content-center {
+  align-content: center;
+}
+
+.content-start {
+  align-content: flex-start;
+}
+
+.content-end {
+  align-content: flex-end;
+}
+
+.content-between {
+  align-content: space-between;
+}
+
+.content-around {
+  align-content: space-around;
+}
+
+.content-evenly {
+  align-content: space-evenly;
+}
+
 .self-auto {
   align-self: auto;
 }
@@ -4297,46 +4321,6 @@ video {
 
 .justify-evenly {
   justify-content: space-evenly;
-}
-
-.content-center {
-  align-content: center;
-}
-
-.content-start {
-  align-content: flex-start;
-}
-
-.content-end {
-  align-content: flex-end;
-}
-
-.content-between {
-  align-content: space-between;
-}
-
-.content-around {
-  align-content: space-around;
-}
-
-.justify-self-start {
-  justify-self: start;
-}
-
-.justify-self-end {
-  justify-self: end;
-}
-
-.justify-self-center {
-  justify-self: center;
-}
-
-.justify-self-stretch {
-  justify-self: stretch;
-}
-
-.justify-self-baseline {
-  justify-self: baseline;
 }
 
 .flex-1 {
@@ -14741,6 +14725,30 @@ video {
     align-items: stretch;
   }
 
+  .sm\:content-center {
+    align-content: center;
+  }
+
+  .sm\:content-start {
+    align-content: flex-start;
+  }
+
+  .sm\:content-end {
+    align-content: flex-end;
+  }
+
+  .sm\:content-between {
+    align-content: space-between;
+  }
+
+  .sm\:content-around {
+    align-content: space-around;
+  }
+
+  .sm\:content-evenly {
+    align-content: space-evenly;
+  }
+
   .sm\:self-auto {
     align-self: auto;
   }
@@ -14783,46 +14791,6 @@ video {
 
   .sm\:justify-evenly {
     justify-content: space-evenly;
-  }
-
-  .sm\:content-center {
-    align-content: center;
-  }
-
-  .sm\:content-start {
-    align-content: flex-start;
-  }
-
-  .sm\:content-end {
-    align-content: flex-end;
-  }
-
-  .sm\:content-between {
-    align-content: space-between;
-  }
-
-  .sm\:content-around {
-    align-content: space-around;
-  }
-
-  .sm\:justify-self-start {
-    justify-self: start;
-  }
-
-  .sm\:justify-self-end {
-    justify-self: end;
-  }
-
-  .sm\:justify-self-center {
-    justify-self: center;
-  }
-
-  .sm\:justify-self-stretch {
-    justify-self: stretch;
-  }
-
-  .sm\:justify-self-baseline {
-    justify-self: baseline;
   }
 
   .sm\:flex-1 {
@@ -25197,6 +25165,30 @@ video {
     align-items: stretch;
   }
 
+  .md\:content-center {
+    align-content: center;
+  }
+
+  .md\:content-start {
+    align-content: flex-start;
+  }
+
+  .md\:content-end {
+    align-content: flex-end;
+  }
+
+  .md\:content-between {
+    align-content: space-between;
+  }
+
+  .md\:content-around {
+    align-content: space-around;
+  }
+
+  .md\:content-evenly {
+    align-content: space-evenly;
+  }
+
   .md\:self-auto {
     align-self: auto;
   }
@@ -25239,46 +25231,6 @@ video {
 
   .md\:justify-evenly {
     justify-content: space-evenly;
-  }
-
-  .md\:content-center {
-    align-content: center;
-  }
-
-  .md\:content-start {
-    align-content: flex-start;
-  }
-
-  .md\:content-end {
-    align-content: flex-end;
-  }
-
-  .md\:content-between {
-    align-content: space-between;
-  }
-
-  .md\:content-around {
-    align-content: space-around;
-  }
-
-  .md\:justify-self-start {
-    justify-self: start;
-  }
-
-  .md\:justify-self-end {
-    justify-self: end;
-  }
-
-  .md\:justify-self-center {
-    justify-self: center;
-  }
-
-  .md\:justify-self-stretch {
-    justify-self: stretch;
-  }
-
-  .md\:justify-self-baseline {
-    justify-self: baseline;
   }
 
   .md\:flex-1 {
@@ -35653,6 +35605,30 @@ video {
     align-items: stretch;
   }
 
+  .lg\:content-center {
+    align-content: center;
+  }
+
+  .lg\:content-start {
+    align-content: flex-start;
+  }
+
+  .lg\:content-end {
+    align-content: flex-end;
+  }
+
+  .lg\:content-between {
+    align-content: space-between;
+  }
+
+  .lg\:content-around {
+    align-content: space-around;
+  }
+
+  .lg\:content-evenly {
+    align-content: space-evenly;
+  }
+
   .lg\:self-auto {
     align-self: auto;
   }
@@ -35695,46 +35671,6 @@ video {
 
   .lg\:justify-evenly {
     justify-content: space-evenly;
-  }
-
-  .lg\:content-center {
-    align-content: center;
-  }
-
-  .lg\:content-start {
-    align-content: flex-start;
-  }
-
-  .lg\:content-end {
-    align-content: flex-end;
-  }
-
-  .lg\:content-between {
-    align-content: space-between;
-  }
-
-  .lg\:content-around {
-    align-content: space-around;
-  }
-
-  .lg\:justify-self-start {
-    justify-self: start;
-  }
-
-  .lg\:justify-self-end {
-    justify-self: end;
-  }
-
-  .lg\:justify-self-center {
-    justify-self: center;
-  }
-
-  .lg\:justify-self-stretch {
-    justify-self: stretch;
-  }
-
-  .lg\:justify-self-baseline {
-    justify-self: baseline;
   }
 
   .lg\:flex-1 {
@@ -46109,6 +46045,30 @@ video {
     align-items: stretch;
   }
 
+  .xl\:content-center {
+    align-content: center;
+  }
+
+  .xl\:content-start {
+    align-content: flex-start;
+  }
+
+  .xl\:content-end {
+    align-content: flex-end;
+  }
+
+  .xl\:content-between {
+    align-content: space-between;
+  }
+
+  .xl\:content-around {
+    align-content: space-around;
+  }
+
+  .xl\:content-evenly {
+    align-content: space-evenly;
+  }
+
   .xl\:self-auto {
     align-self: auto;
   }
@@ -46151,46 +46111,6 @@ video {
 
   .xl\:justify-evenly {
     justify-content: space-evenly;
-  }
-
-  .xl\:content-center {
-    align-content: center;
-  }
-
-  .xl\:content-start {
-    align-content: flex-start;
-  }
-
-  .xl\:content-end {
-    align-content: flex-end;
-  }
-
-  .xl\:content-between {
-    align-content: space-between;
-  }
-
-  .xl\:content-around {
-    align-content: space-around;
-  }
-
-  .xl\:justify-self-start {
-    justify-self: start;
-  }
-
-  .xl\:justify-self-end {
-    justify-self: end;
-  }
-
-  .xl\:justify-self-center {
-    justify-self: center;
-  }
-
-  .xl\:justify-self-stretch {
-    justify-self: stretch;
-  }
-
-  .xl\:justify-self-baseline {
-    justify-self: baseline;
   }
 
   .xl\:flex-1 {
