update "mobile-first" resize handle cursor

--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -129,6 +129,6 @@
   margin: 0 -0.1875rem;
 }
 
-body.cursor-ew-resize * {
-  cursor: ew-resize !important;
+body.cursor-grabbing * {
+  cursor: grabbing !important;
 }
