--- a/src/css/prism-atom-dark.css
+++ b/src/css/prism-atom-dark.css
@@ -4,8 +4,8 @@
  * @author Joe Gibson (@gibsjose)
  */
 
- code[class*="language-"],
- pre[class*="language-"] {
+code[class*='language-'],
+pre[class*='language-'] {
   @apply font-mono text-gray-200;
   /* color: #c5c8c6; */
   /* text-shadow: 0 1px rgba(0, 0, 0, 0.3); */
@@ -28,7 +28,7 @@
 }
 
 /* Code blocks */
-pre[class*="language-"] {
+pre[class*='language-'] {
   @apply p-4;
   /* padding: 1em; */
   /* margin: .5em 0; */
@@ -36,15 +36,15 @@ pre[class*="language-"] {
   border-radius: 0.3em;
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
+:not(pre) > code[class*='language-'],
+pre[class*='language-'] {
   background: #1d1f21;
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
-  padding: .1em;
-  border-radius: .3em;
+:not(pre) > code[class*='language-'] {
+  padding: 0.1em;
+  border-radius: 0.3em;
 }
 
 .token.comment,
@@ -60,23 +60,23 @@ pre[class*="language-"] {
 }
 
 .namespace {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .token.property,
 .token.keyword,
 .token.tag {
-  color: #96CBFE;
+  color: #96cbfe;
 }
 
 .token.class-name {
-  color: #FFFFB6;
+  color: #ffffb6;
   text-decoration: underline;
 }
 
 .token.boolean,
 .token.constant {
-  color: #99CC99;
+  color: #99cc99;
 }
 
 .token.symbol,
@@ -85,7 +85,7 @@ pre[class*="language-"] {
 }
 
 .token.number {
-  color: #FF73FD;
+  color: #ff73fd;
 }
 
 .token.selector,
@@ -94,42 +94,42 @@ pre[class*="language-"] {
 .token.char,
 .token.builtin,
 .token.inserted {
-  color: #A8FF60;
+  color: #a8ff60;
 }
 
 .token.variable {
-  color: #C6C5FE;
+  color: #c6c5fe;
 }
 
 .token.operator {
-  color: #EDEDED;
+  color: #ededed;
 }
 
 .token.entity {
-  color: #FFFFB6;
+  color: #ffffb6;
   /* text-decoration: underline; */
 }
 
 .token.url {
-  color: #96CBFE;
+  color: #96cbfe;
 }
 
 .language-css .token.string,
 .style .token.string {
-  color: #87C38A;
+  color: #87c38a;
 }
 
 .token.atrule,
 .token.attr-value {
-  color: #F9EE98;
+  color: #f9ee98;
 }
 
 .token.function {
-  color: #DAD085;
+  color: #dad085;
 }
 
 .token.regex {
-  color: #E9C062;
+  color: #e9c062;
 }
 
 .token.important {
@@ -148,8 +148,8 @@ pre[class*="language-"] {
   cursor: help;
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
+:not(pre) > code[class*='language-'],
+pre[class*='language-'] {
   background: transparent;
   @apply text-sm;
 }
@@ -169,7 +169,7 @@ pre[class*="language-"] {
 } */
 
 /* New overrides */
-code[class*="language-"], pre[class*="language-"] {
+/* code[class*="language-"], pre[class*="language-"] {
   @apply subpixel-antialiased !important;
   @apply text-code-white !important;
 }
@@ -277,4 +277,4 @@ code[class^='language-diff'], pre[class^='language-diff'] {
       @apply text-code-green !important;
     }
   }
-}
+} */
