add support for language specific diff code blocks

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,7 +3,7 @@
 /*! purgecss start ignore */
 @import 'carbon-ads.css';
 @import 'docsearch.css';
-@import 'prism-atom-dark.css';
+@import 'prism.css';
 @import 'bar-of-progress.css';
 @import 'markdown.css';
 /*! purgecss end ignore */
