hover/focus/variant page examples

--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -81,8 +81,8 @@
   @apply bg-blue-700 !important;
 }
 
-.checked\:bg-gray-900:checked {
-  @apply bg-gray-900 !important;
+.checked\:bg-light-blue-600:checked {
+  @apply bg-light-blue-600 !important;
 }
 
 .checked\:border-transparent:checked {
@@ -119,4 +119,13 @@ body.cursor-grabbing * {
 .mono > div > span {
   transition-duration: 0.5s;
   transition-property: background-color, border-color, color, fill, stroke;
+}
+
+.form-tick:checked {
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z'/%3e%3c/svg%3e");
+  border-color: transparent;
+  background-color: currentColor;
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
