Fixing colors in examples to work with "standard" Tailwind CSS colors

--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -81,8 +81,8 @@
   @apply bg-blue-700 !important;
 }
 
-.checked\:bg-light-blue-600:checked {
-  @apply bg-light-blue-600 !important;
+.checked\:bg-blue-600:checked {
+  @apply bg-blue-600 !important;
 }
 
 .checked\:border-transparent:checked {
